# investing

./: .flake8  .gitignore
portfolio_gain/: app.py  bot.config  build.txt  config.py  display_helpers.py  dockerfile  dockerfile.base  dockerfile_poetry  il_tickers.py  kill_app.sh  portfolio.csv  portfolio.py  portfolio_bot.py  portfolio_bot.service  pyproject.toml  requirements-base.txt  requirements.txt
portfolio_gain/templates/: base.html  details.html  home.html  summary.html
stock_query/: requirements.txt  stocks.list  zeitouni.py
